test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specification_overflow_value.sol
contract C layout at 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF + 1 {}
// ----
// TypeError 1763: (21-91): Storage layout cannot be specified by a number exceeding the range of type uint256. Current type is int_const 1157...(70 digits omitted)...9936 Literal is too large to fit in uint256.
